src/components/PerformanceInsights/PerformanceInsights.css
.insights-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 16px;
}

.insights-header h3 {
  font-size: 16px;
  font-weight: 500;
  color: var(--text-primary);
}

.time-selector {
  display: flex;
  gap: 12px;
  font-size: 14px;
  color: var(--text-primary);
  opacity: 0.7;
}

.time-selector span {
  cursor: pointer;
  transition: all 0.2s ease;
}

.time-selector span.active {
  color: var(--verbal-color);
  opacity: 1;
}

.time-selector span:hover {
  opacity: 1;
}

.insights-grid {
  display: flex;
  /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
  flex-wrap: wrap;
  gap: 10px;
}

.insights-grid > * {
  flex: 1;
}

.time-section {
  display: flex;
  align-items: flex-start;
  gap: 8px;
  /* flex-direction: column; */
  width: 100%;
}

.time-details {
  display: flex;
  align-items: center;
  gap: 16px;
  width: 100%;
}

.insight-content-large {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.time-value {
  display: flex;
  flex-wrap: wrap;
  gap: 12px;
  /* align-items: center; */
  width: 100%;
  justify-content: space-between;
}

.time-text-group {
  display: flex;
  flex-direction: column;
  /* width: 50px; */
  gap: 4px;
  padding-top: 2px;
}

.time-text-group > span {
  line-height: 16px;
}

/* .time-value.fast {
  color: #2ecc71;
}

.time-value.okay {
  color: #f39c12;
}

.time-value.slow {
  color: #e74c3c;
} */

.speed-indicator {
  width: 80px;
  height: 50px;
  position: relative;
  top: -6px;
}

.speedometer-icon {
  width: 100%;
  height: 100%;
}
.insight-icon-container {
  display: flex;
  /* align-items: center; */
  gap: 8px;
  /* align-items: flex-start; */
}

.insight-card.timerr {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

[data-theme="dark"] .insight-card {
  border: 1px solid #5b5b5b;
  background-color: var(--bg-secondary);
}

.speedometer-bg {
  stroke: var(--border-color);
  stroke-width: 6;
  stroke-opacity: 0.3;
}

.speed-section.fast {
  stroke: #2ecc71;
  stroke-width: 6;
}

.speed-section.okay {
  stroke: #f39c12;
  stroke-width: 6;
}

.speed-section.slow {
  stroke: #e74c3c;
  stroke-width: 6;
}

.speedometer-needle {
  stroke: var(--text-primary);
  stroke-linecap: round;
}

.speedometer-needle-group {
  transition: transform 1s cubic-bezier(0.4, 0, 0.2, 1);
}

.speedometer-center {
  fill: var(--text-primary);
}

.target-time {
  font-size: 12px;
  color: var(--text-primary);
  opacity: 0.7;
}

.subject-label {
  font-size: 12px;
  padding: 5px 6px;
  border-radius: 4px;
  font-weight: 500;
}

.subject-label.verbal {
  background-color: var(--verbal-color);
  padding-inline: 7px;
  padding-block: 3px;
  color: white;
}

.subject-label.math {
  background-color: var(--bar-math-color);
  color: white;
  transition: none;
}

.subject-label-container {
  /* padding-top: 4px; */
}

.insight-value .time-section {
  display: flex;
  /* align-items: baseline; */
  /* margin-right: 16px; */
}

.insight-value.time-insights {
  flex-wrap: wrap;
  gap: 12px;
}

.insight-card {
  background-color: var(--bg-secondary);
  display: flex;
  align-items: flex-start;
  gap: 12px;
  padding: 12px;
  /* background-color: var(--bg-primary); */
  border-radius: 12px;
  transition: transform 0.2s ease;
  border: 1px solid var(--border-color);
}

.insight-card:hover {
  transform: translateY(-2px);
}

.insight-icon {
  /* width: 32px; */
  /* height: 32px; */
  padding: 10px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  background: linear-gradient(45deg, var(--verbal-color), #7a96d4);
  color: white;
}

.insight-content {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.insight-content.timerr {
  padding-left: 40px;
}

.insight-label {
  font-size: 14px;
  color: var(--text-primary);
  opacity: 0.7;
  font-weight: 400;
  display: flex;
  /* justify-content: space-between; */
  align-items: center;
  gap: 4px;
}

.insight-label i {
  font-size: 12px;
}

.insight-value {
  font-family: "DM Sans", sans-serif;
  font-size: 20px;
  font-weight: 600;
  color: var(--text-primary);
  display: flex;
  align-items: baseline;
  gap: 4px;
}

.insight-value.positive {
  color: var(--increase-color);
}

.insight-period {
  font-size: 14px;
  font-weight: 400;
  opacity: 0.7;
}

.trend {
  font-size: 14px;
  font-weight: 500;
}

.trend.positive {
  color: var(--increase-color);
}

.trend.negative {
  color: var(--decrease-color);
}

@media (max-width: 1180px) {
  .insights-grid {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (max-width: 768px) {
  .insights-grid {
    grid-template-columns: 1fr;
  }
}

.target-icon {
  width: 14px;
  height: 14px;
  opacity: 1;
  filter: brightness(0.2);
}

[data-theme="dark"] .target-icon {
  filter: none;
}

